fix padding to avoid overlapping buttons (#54)

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -956,7 +956,7 @@ body.tagLabelsRightAligned .gitRef.tag{
 }
 
 #controls.fetchSupported{
-	padding-right:162px;
+	padding-right:180px;
 }
 #controls.fetchSupported #currentBtn{
 	right:160px;
